--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Hayti-or-The-black-republic_68592
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 68592-h/images/cover.jpg
 creator:
   author:
     agent_name: St. John, Spenser, Sir
@@ -13,6 +16,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/54851
     wikipedia: https://en.wikipedia.org/wiki/Spenser_St._John
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/68592#Hayti-or-The-black-republic
 gutenberg_issued: '2022-07-23'
 identifiers:
   gutenberg: '68592'
